BB-18377: ADA:  My account - fixed styles - made consent icon readable for SR

--- a/src/Oro/Bundle/CustomerBundle/Resources/public/default/scss/components/capabilities.scss
+++ b/src/Oro/Bundle/CustomerBundle/Resources/public/default/scss/components/capabilities.scss
@@ -7,11 +7,10 @@
 .role-capability {
     margin: 16px 0;
 
-    h2 {
+    &__group-title {
         text-transform: uppercase;
         padding-bottom: 16px;
         font-size: $base-font-size;
-        font-weight: 700;
     }
 
     &__group-own-title {
